--- a/.github/workflows/msg1500.yml
+++ b/.github/workflows/msg1500.yml
@@ -56,6 +56,9 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         echo "src-git ssrp https://github.com/fw876/helloworld.git" >> ./feeds.conf.default
+        echo "src-git OpenAppFilter https://github.com/destan19/OpenAppFilter" >> feeds.conf.default
+        git clone --depth 1 https://github.com/vernesong/OpenClash.git package/luci-app-openclash
+        git clone --depth 1 https://github.com/zzsj0928/luci-app-pushbot package/luci-app-pushbot
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
